# opentryon

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  api_server.py  bg_remove.py  env.template  environment.yml  fashion_agent.py  gpt_image.py  image_gen.py  index.html  luma_image.py  luma_video_test.py  model_swap_agent.py  requirements.txt  search-index.json  search.html  setup.py  sitemap.xml  sora_video.py  test_gpt_image.py  test_luma.py  veo_video.py  video_gen.py  vton.py  vton_agent.py
.github/: PULL_REQUEST_TEMPLATE.md
advanced/: custom-models.html  new-model-checklist.html  performance-optimization.html  training-guide.html  troubleshooting.html
agents/: agent-ideas-summary.html  agent-ideas.html  model-swap-agent.html  vton-agent.html
api-reference/: ben2.html  diffusion.html  fashn.html  flux2.html  gemini-omni.html  gpt-image.html  kimi.html  kling-ai.html  nano-banana.html  nova-canvas.html  overview.html  preprocessing.html  pruna.html  segmind.html  sora-video.html  utils.html
community/: code-of-conduct.html  contributing.html  license.html  roadmap.html
datasets/: fashion-mnist.html  overview.html  subjects200k.html  viton-hd.html
demos/: extract-garment.html  fashion-prompt-builder.html  index.html  model-swap.html  outfit-generator.html  overview.html  virtual-tryon.html
docs/: .gitignore  DEPLOYMENT.md  PLACEHOLDER_PAGES.md  README.md  SETUP.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
examples/: basic-usage.html  datasets.html  garment-pipeline.html  outfit-generation.html  virtual-tryon.html
fashion-prompt-builder/: README.md
getting-started/: cli.html  configuration.html  installation.html  quickstart.html
local-models/: flux2-turbo.html  kimi-vl.html  overview.html
mcp-server/: README.md  config.py  pyproject.toml  requirements.txt  server.py  test_server.py
mcp-server/docs/: ARCHITECTURE.md  INSTALL.md  PROJECT_OVERVIEW.md  QUICKSTART.md  SUMMARY.md
mcp-server/examples/: claude_desktop_config.json  cursor_mcp_config.json  example_usage.py
mcp-server/tools/: __init__.py  datasets.py  image_gen.py  preprocessing.py  video_gen.py  virtual_tryon.py
mcp-server/utils/: __init__.py  image_utils.py  validation.py
notebooks/: virtual_tryon_demo.ipynb
preprocessing/: garment-extraction.html  garment-segmentation.html  human-segmentation.html  image-captioning.html  overview.html  pose-estimation.html
release-notes/: RELEASE_NOTES_v0.0.2.md
(+310 files in other folders)
